sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: not found: value color
    color = getColor(i);
    ^DutchFlagAlgo:9: error: not found: value color
    color match {
    ^